Add list of modeled countries
Per https://github.com/theicct/roadmap/issues/510.

--- a/versions/v2.3.md
+++ b/versions/v2.3.md
@@ -41,7 +41,7 @@ permalink: /versions/v2.3/
 
 <!--te-->
 ## Introduction
-The ICCT’s Roadmap model is a global transportation emissions model covering all on-road vehicle activity in over 190 countries. The Roadmap model is intended to help policymakers worldwide to identify and understand trends in the transportation sector, assess emission impacts of different policy options, and frame plans to effectively reduce emissions of both greenhouse gases (GHGs) and local air pollutants. It is designed to allow transparent, customizable estimation of transportation emissions for a broad range of policy cases.
+The ICCT’s Roadmap model is a global transportation emissions model covering all on-road vehicle activity in over 185 countries. The Roadmap model is intended to help policymakers worldwide to identify and understand trends in the transportation sector, assess emission impacts of different policy options, and frame plans to effectively reduce emissions of both greenhouse gases (GHGs) and local air pollutants. It is designed to allow transparent, customizable estimation of transportation emissions for a broad range of policy cases.
 
 Making use of the ICCT’s worldwide tracking of transportation policies, the model provides annual estimates of historical and future emissions under currently adopted policies out to 2050 for USA, and 2070 everywhere else. Roadmap estimates historical and projected well-to-wheel CO<sub>2</sub> emissions disaggregated by powertrain and fuel type as well as emissions of 15 local air pollutants. This version of the model includes six vehicle types and 11 powertrain and fuel combinations, as shown in Tables 1 and 2, respectively.
 
@@ -71,6 +71,8 @@ Making use of the ICCT’s worldwide tracking of transportation policies, the mo
 | ICE LPG            | LPG                   | Internal combustion engines powered by liquefied petroleum gas                              |
 | BEV                | Electricity           | Battery electric vehicles                                                                   |
 | FCEV               | Hydrogen              | Fuel cell electric vehicles powered by hydrogen                                             |
+
+Specifically, the ISO codes of countries modeled in this version of Roadmap are: ABW, AFG, AGO, ALB, ARE, ARG, ARM, ATG, AUS, AUT, AZE, BDI, BEL, BEN, BFA, BGD, BGR, BHR, BHS, BIH, BLR, BLZ, BMU, BOL, BRA, BRB, BRN, BTN, BWA, CAF, CAN, CHE, CHL, CHN, CIV, CMR, COD, COG, COL, COM, CPV, CRI, CUB, CYM, CYP, CZE, DEU, DJI, DMA, DNK, DOM, DZA, ECU, EGY, ERI, ESP, EST, ETH, FIN, FJI, FRA, FSM, GAB, GBR, GEO, GHA, GIN, GMB, GNB, GNQ, GRC, GRD, GTM, GUY, HND, HRV, HTI, HUN, IDN, IND, IRL, IRN, IRQ, ISL, ISR, ITA, JAM, JOR, JPN, KAZ, KEN, KGZ, KHM, KIR, KNA, KOR, KWT, LAO, LBN, LBR, LBY, LCA, LKA, LSO, LTU, LUX, LVA, MAR, MDA, MDG, MDV, MEX, MKD, MLI, MLT, MMR, MNE, MNG, MOZ, MRT, MUS, MWI, MYS, NAM, NER, NGA, NIC, NLD, NOR, NPL, NZL, OMN, PAK, PAN, PER, PHL, PNG, POL, PRK, PRT, PRY, PYF, QAT, ROU, RUS, RWA, SAU, SDN, SEN, SGP, SLB, SLE, SLV, SOM, SRB, SSD, STP, SVK, SVN, SWE, SWZ, SYC, SYR, TCD, TGO, THA, TJK, TKM, TLS, TON, TTO, TUN, TUR, TZA, UGA, UKR, URY, USA, UZB, VCT, VEN, VNM, VUT, WSM, YEM, ZAF, ZMB, ZWE.
 
 Many of the default model inputs are sourced from the IEA Mobility Model (MoMo)’s January 2023 version. Additional country-specific data is included for key regions where available. Using sales inputs and calibrated survival curves, Roadmap’s turnover module first compiles a detailed inventory of vehicle stock. Applying per-vehicle mileage rates and energy intensities, the model next calculates detailed energy consumption estimates. These, in turn, are a key input to the emissions calculations. This document describes the inputs and methods used in each major calculation step as well as some additional optional components available to users.
 
