Manually add ToC to v2.4
See #2

--- a/versions/v2.4.md
+++ b/versions/v2.4.md
@@ -6,9 +6,38 @@ permalink: /versions/v2.4/
 ## Table of contents
 <!--ts-->
 
+ * [Introduction](#introduction)
+    * [Acknowledgments](#acknowledgments) 
+  * [Sales](#sales)
+     * [Historical sales](#historical-sales)
+     * [Projected sales](#projected-sales)
+     * [Used vehicle imports](#used-vehicle-imports)
+  * [Stock turnover](#stock-turnover)
+     * [From-age-zero turnover](#from-age-zero-turnover)
+     * [Year-over-year turnover](#year-over-year-turnover)
+     * [Major Markets](#major-markets)
+  * [Mileage](#mileage)
+     * [Mileage degradation](#mileage-degradation)
+     * [Scrappage policies](#scrappage-policies)
+     * [Passenger-freight activity](#passenger-freight-activity)
+  * [Vehicle efficiency](#vehicle-efficiency)
+  * [Emissions](#emissions)
+     * [Emissions standards](#emissions-standards)
+     * [Emission factors](#emission-factors)
+     * [Emission deterioration](#emission-deterioration)
+     * [Plug-in hybrid electric vehicles (PHEVs)](#plug-in-hybrid-electric-vehicles-phevs)
+     * [High emitters](#high-emitters)
+     * [Sulfur effects](#sulfur-effects)
+     * [Biodiesel effects on local air pollutants](#biodiesel-effects-on-local-air-pollutants)
+     * [Well-to-wheel GHG emissions of biofuels](#well-to-wheel-ghg-emissions-of-biofuels)
+     * [GHG emissions](#ghg-emissions)
+  * [Policies and scenarios](#policies-and-scenarios)
+     * [Scenario inputs](#scenario-inputs)
+     * [Subregional policies](#subregional-policies)
+     * [Vehicle segmentation](#vehicle-segmentation)
+     * [Combining Subregions and Segments](#combining-subregions-and-segments)
 
-<!-- Created by https://github.com/ekalinin/github-markdown-toc -->
-<!-- Added by: gabealvarez, at: Tue Apr 16 15:54:05 PDT 2024 -->
+<!-- Manually added by Gabe, since gh-md-toc appears broken, on: Fri May 10 13:41:23 PDT 2024 -->
 
 <!--te-->
 ## Introduction
